<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical"
        tools:context=".Activity2">

    <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/please_enter_your_name"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

    <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/please_enter_your_number"
            android:inputType="phone"
            android:importantForAutofill="no" />

    <EditText
            android:id="@+id/etWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/please_enter_your_website"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

    <EditText
            android:id="@+id/etMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/please_enter_location_or_address"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/ivHappy"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/happy"
                app:srcCompat="@drawable/happy" />

        <ImageView
                android:id="@+id/ivNeutural"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/neutural"
                app:srcCompat="@drawable/neutural" />

        <ImageView
                android:id="@+id/ivSad"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/sad"
                app:srcCompat="@drawable/sad" />
    </LinearLayout>
</LinearLayout>