<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/contacts_app"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/ivResult"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/result"
            app:srcCompat="@android:drawable/btn_dialog" />

    <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:textColor="#B440FA"
            android:textSize="16sp"
            android:textStyle="bold" />

    <ImageView
            android:id="@+id/ivCall"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:contentDescription="@string/call"
            app:srcCompat="@drawable/call" />

    <ImageView
            android:id="@+id/ivWeb"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:contentDescription="@string/web"
            app:srcCompat="@drawable/web" />

    <ImageView
            android:id="@+id/ivMap"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:contentDescription="@string/map"
            app:srcCompat="@drawable/map" />

    <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:text="@string/create_new_contact"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />


</LinearLayout>